fix: no transition from blurred img to normal img

--- a/src/components/UI/CustomImage/style.module.scss
+++ b/src/components/UI/CustomImage/style.module.scss
@@ -1,31 +1,29 @@
-@use "../../../styles/vars" as *;
-
 .blur-load {
   background-size: cover;
   background-position: center;
   height: 100%;
   width: 100%;
   padding: 0;
-}
-
-.blur-load > a {
-  height: 100%;
-  width: 100%;
-}
-
-.image {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-position: center;
-  object-fit: fill;
-}
-
-.blur-load.loaded > image {
-  opacity: 1;
-}
-
-.blur-load > image {
-  opacity: 0;
-  transition: opacity 200ms ease-in-out;
+  .link {
+    height: 100%;
+    width: 100%;
+  }
+  .image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: fill;
+  }
+  .link,
+  .image {
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
+  }
+  &.loaded {
+    .link,
+    .image {
+      opacity: 1;
+    }
+  }
 }
